deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-cloud-devops-service
  namespace: hr-cloud
  labels:
    app: hr-cloud-devops-service
spec:
  type: ClusterIP
  selector:
    app: hr-cloud-devops-service
  ports:
    - name: http
      port: 80
      targetPort: http
